general.css
table, form, input, td, th, p, textarea, select {
  /*font-family: Arial, sans-serif;*/
  font-size: 14px;
}

body {
  background: #fff;
}

#page-body {
  height: 100%!important;
}

.row {
  height: 100%!important;
}

h1, h2, h3, h4, h5, h6 {
  color: #000000; }

a:link, a:visited {
  text-decoration: none;
  color: #3b73af;
}

a:hover, a:active {
  text-decoration: underline;
}

.row .pane-content {
  background-color: #FEFEFE;
}

h2 {
  font-size: 24px;
  font-weight: normal;
  line-height: 1.25;
}

#executors a.model-link.inside {
  background: none repeat scroll 0 0 #F5F5F5!important;
  color: #3B73AF;
  display: inline-block;
  font-size: 12px;
  font-weight: normal;
  line-height: 1.3;
  margin: 0 3px 0 0;
  width: 100%;
  max-width: 100%;
  padding: 3px 10px 3px 3px;
  text-align: left;
  text-decoration: none;
  vertical-align: middle;
  white-space: normal;
}

td.pane.build-name {
  white-space: nowrap;
}

